# cxx_loan_simulator

./: README.md  docker-compose.dev.yml  docker-compose.yml
aws/: deploy.sh  task-definition.json
backend/: CMakeLists.txt  Dockerfile  config.json  main.cc
backend/controllers/: LoanController.cc  LoanController.h
backend/models/: LoanModels.h
backend/services/: AmortizationCalculator.cc  AmortizationCalculator.h
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AmortizationChart.tsx  AmortizationTable.tsx  DebtPayoffStrategy.tsx  ExtraPaymentInput.tsx  IndividualLoanTables.tsx  InfoTooltip.tsx  LoanForm.tsx  LoanInput.tsx  PaymentBreakdownChart.tsx  PaymentSlider.tsx  PayoffOrderList.tsx  ResultsSummary.tsx  StrategyBalanceChart.tsx  StrategyComparisonTable.tsx  StrategySelector.tsx  ThemeToggle.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/services/: loanApi.ts  payoffStrategyService.ts
frontend/src/types/: loan.ts  payoffStrategy.ts
